--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modelcontextprotocol/server-market-dev",
+  "name": "mcp-server-market-dot-dev",
   "version": "0.1.0",
   "description": "MCP server for market.dev API integration",
   "license": "MIT",
@@ -8,7 +8,7 @@
   "bugs": "https://github.com/modelcontextprotocol/servers/issues",
   "type": "module",
   "bin": {
-    "mcp-server-market-dev": "dist/index.js"
+    "mcp-server-market-dot-dev": "dist/index.js"
   },
   "files": [
     "dist"
@@ -19,7 +19,6 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.8.0",
     "fastmcp": "^1.20.5",
     "zod": "^3.24.2"
   },
